updating janpreet data

--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
-title: Chris Bobbe
-subtitle: Web Developer
-description: Website and portfolio of Chris Bobbe, front-end web developer.
+title: Janpreet Singh
+subtitle: Data Scientist
+description: Website and portfolio of Janpreet Singh, Data Scientist.
 
-author: Chris Bobbe
-email: csbobbe@gmail.com
+author: Janpreet Singh
+email: janpreetsingh.1@gmail.com
 avatar: assets/images/avatar.jpg
 
 baseurl: ""
-url: "https://chrisbobbe.github.io"
+url: "https://janpreetsingh.tech"
 
 # Social settings
-facebook_url: https://www.facebook.com/chris.bobbe
-github_url: https://github.com/chrisbobbe
-linkedin_url: https://www.linkedin.com/in/chrisbobbe1995/
-twitter_url: https://twitter.com/chrisbobbe
+facebook_url: https://www.facebook.com/janpreet.singh.756
+github_url: https://github.com/janismdhanbad
+linkedin_url: https://www.linkedin.com/in/janpreet-singh/
+twitter_url: https://twitter.com/janpreetds1
 
 # SEO settiongs
-google_analytics: UA-112211352-1
+google_analytics: 
 
 # Build settings
 remote_theme: chrisbobbe/jekyll-theme-prologue
