--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Janpreet Singh
-subtitle: Data Scientist
+subtitle: Computer Vision @Umich
 description: Website and portfolio of Janpreet Singh, Data Scientist.
 
 author: Janpreet Singh
-email: janpreetsingh.1@gmail.com
-avatar: assets/images/avatar.jpg
+email: janpreet@umich.edu
+avatar: 
 
 baseurl: ""
 url: "https://janpreetsingh.tech"
